// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutations books trips 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Cannot query field "failure" on type "TripUpdateResponse".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches list of launches 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Cannot query field "fullName" on type "Rocket". Did you mean "name"?],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches single launch 1`] = `
Object {
  "data": Object {
    "launch": Object {
      "id": "1",
      "isBooked": true,
      "mission": Object {
        "name": "FalconSat",
      },
      "rocket": Object {
        "type": "Merlin A",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
